<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sliding_shadow"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.93"
        android:background="@drawable/sliding_shadow" >

        <EditText
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_sex"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="请输入年龄"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_age"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/et_hob"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="输入电话"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="19dp"
            android:text="@string/text_tel"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_hob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/et_pro"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="输入爱好"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_pro"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_age"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:hint="输入性别"
            android:inputType="text|textCapCharacters|textPersonName" />

        <EditText
            android:id="@+id/et_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_pro"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="输入职业"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/soft_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_sex"
            android:layout_alignParentLeft="true"
            android:text="@string/text_sex"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/text_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/soft_current_version"
            android:layout_marginTop="60dp"
            android:text="@string/text_pro"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_tel"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="49dp"
            android:text="@string/text_hob"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/sliding_shadow"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_save_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/xiao_huise" />

    </RelativeLayout>

</LinearLayout>